--- a/internal/template/index.html
+++ b/internal/template/index.html
@@ -8,6 +8,10 @@
 <body>
     <div>
         <h1>Qurl</h1>
+        <form action="/create" method="post">
+            <input id="long_url" name="long_url" required placeholder="https://example.com" type="text"/>
+            <input type="submit" value="Generate URL">
+        </form>
     </div>
 </body>
 </html>
